Added meta information and link to styles.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+	<!-- Get the style from styles.css -->
+	<link rel="stylesheet" href="styles.css">
+
+	<!--Author and Description of the Web-->
+	<meta name="author" content="Kai Jauregi">
+	<meta name="description" content="Game developer looking forward to specialize in Gameplay and Tools programming">
+	
+	<!--The character codification-->
+	<meta charset="UTF-8">
+	<!--Adapt to the size of the device-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!--Title of the web-->
+	<title>Portfolio</title>
 </head>
+
 <body>
-    <h1>Kai Jauregi</h1>
-    <h2>Gameplay and Tools Programmer</h2>
+	<h1>Kai Jauregi</h1>
+	<h2>Gameplay and Tools Programmer</h2>
 </body>
+
 </html>
