--- a/contact.html
+++ b/contact.html
@@ -21,32 +21,19 @@
 
 <body>
 	<header>
-		<div class="vl">
+		<h1>Kai Jauregi</h1>
+		<h2>Gameplay and Tools Programmer</h2>
+		<hr>
 
-		</div>
-
-
-
-		<table>
-			<tr>
-				<td>
-					<h1>Kai Jauregi</h1>
-					<h2>Gameplay and Tools Programmer</h2>
-				</td>
-				<td>
-					<nav>
-						<ul>
-							<li><a href="index.html">Contact</a></li>
-							<li><a href="contact.html">Projects</a></li>
-							<li><a href="#inicio">Home</a></li>
-						</ul>
-					</nav>
-				</td>
-			</tr>
-		</table>
+		<nav>
+			<ul>
+				<li><a href="index.html">Projects</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href="#inicio">Inicio</a></li>
+			</ul>
+		</nav>
 	</header>
-	<hr>
-	<main></main>
+    <h3>Contact</h3>
 
 	<footer></footer>
 </body>
