Started Working on footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<!-- Get the style from styles.css -->
 	<link rel="stylesheet" href="styles.css">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 	<!--Author and Description of the Web-->
 	<meta name="author" content="Kai Jauregi">
 	<meta name="description" content="Game developer looking forward to specialize in Gameplay and Tools programming">
@@ -46,9 +48,31 @@
 		</table>
 	</header>
 	<hr>
-	<main></main>
 
-	<footer></footer>
+	<main>
+		<section>
+			<img>
+			<h1>Gameplay and Tools Programmer</h1>
+			<p>Game developer looking forward to specialize in artificial
+				intelligence and gameplay programming. Since the first console my family gave me when
+				I was a child, I was always thinking “how in the world are these videogames created ?”.</p>
+			<p>Due to my desire for knowledge, at 13 I started taking courses 
+				to learn how to create videogames using different engines.</p>
+			<p>From that point onward I never stopped, that is why I went 
+				to ESAT to study how to properly program, I am in Sheffield Hallam University to improve 
+				my skills and I am eager to learn from industry workers and improve even more.</p>
+		</section>
+
+	</main>
+
+	<footer>
+		<ul>
+			<li><i class="fa-brands fa-linkedin"></i></li>
+			<li><i class="fa-brands fa-square-bluesky"></i></li>
+			<li><i class="fa-brands fa-square-github"></i></li>
+		</ul>
+		<p>© Kai Jauregi Azcue. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
