Finished Index Page, added projects and prepare it with contact for tomorrow

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<!-- Get the style from styles.css -->
 	<link rel="stylesheet" href="styles.css">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!--Author and Description of the Web-->
 	<meta name="author" content="Kai Jauregi">
@@ -35,12 +37,13 @@
 					<h1>Kai Jauregi</h1>
 					<h2>Gameplay and Tools Programmer</h2>
 				</td>
+				<td><span class="loader"></span></td>
 				<td>
 					<nav>
 						<ul>
-							<li><a href="index.html">Contact</a></li>
-							<li><a href="contact.html">Projects</a></li>
-							<li><a href="#inicio">Home</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="index.html">Home</a></li>
 						</ul>
 					</nav>
 				</td>
@@ -51,28 +54,100 @@
 
 	<main>
 		<section>
-			<img>
-			<h1>Gameplay and Tools Programmer</h1>
-			<p>Game developer looking forward to specialize in artificial
-				intelligence and gameplay programming. Since the first console my family gave me when
-				I was a child, I was always thinking “how in the world are these videogames created ?”.</p>
-			<p>Due to my desire for knowledge, at 13 I started taking courses 
-				to learn how to create videogames using different engines.</p>
-			<p>From that point onward I never stopped, that is why I went 
-				to ESAT to study how to properly program, I am in Sheffield Hallam University to improve 
-				my skills and I am eager to learn from industry workers and improve even more.</p>
+			<table>
+				<tr>
+					<td class="borderSpacer">
+						<img class="profilePicture" , src="Profile2.png">
+					</td>
+					
+					<td>
+						<h1>Gameplay and Tools Programmer</h1>
+						<p>Game developer looking forward to specialize in artificial
+							intelligence and gameplay programming. Since the first console my family gave me when
+							I was a child, I was always thinking “how in the world are these videogames created ?”.</p>
+						<p>Due to my desire for knowledge, at 13 I started taking courses
+							to learn how to create videogames using different engines.</p>
+						<p>From that point onward I never stopped, that is why I went
+							to ESAT to study how to properly program, I am in Sheffield Hallam University to improve
+							my skills and I am eager to learn from industry workers and improve even more.</p>
+					</td>
+				</tr>
+			</table>
+
+
+		</section>
+		<section>
+			<table class="experience">
+				<tr>
+					<td>
+						<h1>Education</h1>
+						<br>
+						<h2>Full Stack Development</h2>
+						<h3>The Bridge <span class = "extraInformation">| mar. 2025 - now | Bilbao</span></h3>
+						<br>
+						<h2>Machine Learning Specialization</h2>
+						<h3>Tokio School <span class = "extraInformation">| feb. 2025 - now | Online</span></h3>
+						<br>
+						<h2>BSc (Honours) in Computer Science for Games</h2>
+						<h3>Sheffield Hallam University <span class = "extraInformation">| sep. 2023 - may. 2024 | Sheffield</span></h3>
+						<p>In SHU I enhanced my gameplay coding abilities and my collaborative
+							skills by making a first person horror puzzle game for PS5, in a team of
+							six, using my own level editor and entity component architecture base PS5 engine.</p>
+						<br>
+						<h2>Higher National Diploma in Computing</h2>
+						<h3>ESAT |<span class = "extraInformation"> oct. 2020 - jul. 2023 | Valencia</span></h3>
+						<p>ESAT is the institution where I learned to work with Unreal Engine 4 and Unity, 
+							apart from acquiring a strong knowledge in standardised Artificial Intelligence
+							techniques such as A* or Behaviour Trees and I have grown a solid base in graphics
+							programming creating my own engine in C++ using OpenGL.</p>
+					</td>
+					<td>
+						<h1>Professional Experience</h1>
+						<br>
+						<h2>Tools Programmer</h2>
+						<h3>Zarautz Police Department <span class = "extraInformation">| sep. 2024 - jan. 2025 | Zarautz</span></h3>
+						<p>Developed  a program aimed at showcasing traffic accidents. For this purpose the user can draw, 
+							add images and text, customize the previous functionalities and take screenshots. </p>
+						<br>
+						<h2>Gameplay Programmer</h2>
+						<h3>Raccoons Making Games <span class = "extraInformation">| sep. 2022 - jul. 2023 | Valencia</span></h3>
+						<p>As the responsible for all VFXs in  
+							<a target="_blank" href="https://store.steampowered.com/app/2432460/Born_to_Rise/?l=english">
+								Born to Rise</a>, 
+							working together with the art and design department, I have created, 
+							inserted and enhanced all particles for the game, apart from implementing
+							 most of the platforms and making the dialogue system.
+						</p>
+					</td>
+				</tr>
+
+			</table>
+
 		</section>
 
 	</main>
-
 	<footer>
+		<hr>
 		<ul>
-			<li><i class="fa-brands fa-linkedin"></i></li>
-			<li><i class="fa-brands fa-square-bluesky"></i></li>
-			<li><i class="fa-brands fa-square-github"></i></li>
+			<li>
+				<a target="_blank" href="https://www.linkedin.com/in/jauregiazcue/">
+					<i class="fa-brands fa-linkedin"></i>
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://bsky.app/profile/jauregiazcue.bsky.social">
+					<i class="fa-brands fa-square-bluesky"></i>
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://github.com/jauregiazcue">
+					<i class="fa-brands fa-square-github"></i>
+				</a>
+			</li>
 		</ul>
 		<p>© Kai Jauregi Azcue. All rights reserved.</p>
 	</footer>
+
 </body>
 
 </html>
