--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!--Title of the web-->
-	<title>Contact</title>
+	<title>Projects</title>
 </head>
 
 <body>
