--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,6 @@
 
 <body>
 	<header>
-		<div class="vl">
-
-		</div>
-
-
-
 		<table>
 			<tr>
 				<td>
@@ -53,8 +47,20 @@
 	<hr>
 
 	<main>
-		
+		<section>
+			<form action="mailto:jauregiazcue@gmail.com" method="post" enctype="text/plain">
+				Name:<br>
+				<input type="text" name="subject"><br>
+				Comment:<br>
+				<input type="text" name="body" size="50"><br><br>
+				<input type="submit" value="Send">
+				<input type="reset" value="Reset">
+			</form>
+
+		</section>
+
 	</main>
+
 	<footer>
 		<hr>
 		<ul>
