--- a/index.html
+++ b/index.html
@@ -47,26 +47,20 @@
 	<hr>
 
 	<main>
-		<section>
-			<table>
-				<tr>
-					<td class="borderSpacer">
-						<img class="profilePicture" , src="Profile2.png">
-					</td>
-					
-					<td>
-						<h1>Gameplay and Tools Programmer</h1>
-						<p>Game developer looking forward to specialize in artificial
-							intelligence and gameplay programming. Since the first console my family gave me when
-							I was a child, I was always thinking “how in the world are these videogames created ?”.</p>
-						<p>Due to my desire for knowledge, at 13 I started taking courses
-							to learn how to create videogames using different engines.</p>
-						<p>From that point onward I never stopped, that is why I went
-							to ESAT to study how to properly program, I am in Sheffield Hallam University to improve
-							my skills and I am eager to learn from industry workers and improve even more.</p>
-					</td>
-				</tr>
-			</table>
+		<section class="borderSpacer">
+			
+			<img class="profilePicture" , src="Profile2.png">
+			<section>
+				<h1>Gameplay and Tools Programmer</h1>
+				<p>Game developer looking forward to specialize in artificial
+					intelligence and gameplay programming. Since the first console my family gave me when
+					I was a child, I was always thinking “how in the world are these videogames created ?”.</p>
+				<p>Due to my desire for knowledge, at 13 I started taking courses
+					to learn how to create videogames using different engines.</p>
+				<p>From that point onward I never stopped, that is why I went
+					to ESAT to study how to properly program, I am in Sheffield Hallam University to improve
+					my skills and I am eager to learn from industry workers and improve even more.</p>
+			</section>
 
 
 		</section>
@@ -77,20 +71,21 @@
 						<h1>Education</h1>
 						<br>
 						<h2>Full Stack Development</h2>
-						<h3>The Bridge <span class = "extraInformation">| mar. 2025 - now | Bilbao</span></h3>
+						<h3>The Bridge <span class="extraInformation">| mar. 2025 - now | Bilbao</span></h3>
 						<br>
 						<h2>Machine Learning Specialization</h2>
-						<h3>Tokio School <span class = "extraInformation">| feb. 2025 - now | Online</span></h3>
+						<h3>Tokio School <span class="extraInformation">| feb. 2025 - now | Online</span></h3>
 						<br>
 						<h2>BSc (Honours) in Computer Science for Games</h2>
-						<h3>Sheffield Hallam University <span class = "extraInformation">| sep. 2023 - may. 2024 | Sheffield</span></h3>
+						<h3>Sheffield Hallam University <span class="extraInformation">| sep. 2023 - may. 2024 |
+								Sheffield</span></h3>
 						<p>In SHU I enhanced my gameplay coding abilities and my collaborative
 							skills by making a first person horror puzzle game for PS5, in a team of
 							six, using my own level editor and entity component architecture base PS5 engine.</p>
 						<br>
 						<h2>Higher National Diploma in Computing</h2>
-						<h3>ESAT |<span class = "extraInformation"> oct. 2020 - jul. 2023 | Valencia</span></h3>
-						<p>ESAT is the institution where I learned to work with Unreal Engine 4 and Unity, 
+						<h3>ESAT |<span class="extraInformation"> oct. 2020 - jul. 2023 | Valencia</span></h3>
+						<p>ESAT is the institution where I learned to work with Unreal Engine 4 and Unity,
 							apart from acquiring a strong knowledge in standardised Artificial Intelligence
 							techniques such as A* or Behaviour Trees and I have grown a solid base in graphics
 							programming creating my own engine in C++ using OpenGL.</p>
@@ -99,18 +94,22 @@
 						<h1>Professional Experience</h1>
 						<br>
 						<h2>Tools Programmer</h2>
-						<h3>Zarautz Police Department <span class = "extraInformation">| sep. 2024 - jan. 2025 | Zarautz</span></h3>
-						<p>Developed  a program aimed at showcasing traffic accidents. For this purpose the user can draw, 
+						<h3>Zarautz Police Department <span class="extraInformation">| sep. 2024 - jan. 2025 |
+								Zarautz</span></h3>
+						<p>Developed a program aimed at showcasing traffic accidents. For this purpose the user can
+							draw,
 							add images and text, customize the previous functionalities and take screenshots. </p>
 						<br>
 						<h2>Gameplay Programmer</h2>
-						<h3>Raccoons Making Games <span class = "extraInformation">| sep. 2022 - jul. 2023 | Valencia</span></h3>
-						<p>As the responsible for all VFXs in  
-							<a target="_blank" href="https://store.steampowered.com/app/2432460/Born_to_Rise/?l=english">
-								Born to Rise</a>, 
-							working together with the art and design department, I have created, 
+						<h3>Raccoons Making Games <span class="extraInformation">| sep. 2022 - jul. 2023 |
+								Valencia</span></h3>
+						<p>As the responsible for all VFXs in
+							<a target="_blank"
+								href="https://store.steampowered.com/app/2432460/Born_to_Rise/?l=english">
+								Born to Rise</a>,
+							working together with the art and design department, I have created,
 							inserted and enhanced all particles for the game, apart from implementing
-							 most of the platforms and making the dialogue system.
+							most of the platforms and making the dialogue system.
 						</p>
 					</td>
 				</tr>
