created projectStyle.css, started adding projects to projects.css

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
 	<!-- Get the style from styles.css -->
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/projectsStyle.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
 		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -33,8 +34,133 @@
 	</script>
 	<div id="header"></div>
 
-	<main>
-		
+	<main class="projectsMain">
+		<article>
+			<header>
+				<h1>Born To Rise</h1>
+				<h2>Unreal 4 C++ Perforce
+					<span class="extraInformation"> • Sep 2022 - Jul 2023</span>
+				</h2>
+				<h3>2.5 Platformer. Available in Steam. Made by Racoons Making Games</h3>
+			</header>
+			<main>
+				<section>
+					<ul>
+						<li>Create, Insert and Enhanced all the particles</li>
+						<li>Masilla Enemy Movement System</li>
+						<li>The Rotable Platform</li>
+						<li>The Movable Platform with three different modes of movement systems</li>
+						<li>The Acid Elevator Hazard</li>
+						<li>Dialogue System for the Intro, Lore pickup and Conversation</li>
+						<li>Controller Vibration Feedback</li>
+						<li>Credits</li>
+					</ul>
+				</section>
+				<aside>
+
+					<iframe src="https://www.youtube.com/embed/T7aY_brAGaw"></iframe>
+				</aside>
+
+			</main>
+
+		</article>
+		<hr>
+		<article>
+			<header>
+				<h1>LoreNomicon</h1>
+				<h2>PS5 C++ GitHub
+					<span class="extraInformation"> • Jan 2024 - May 2024</span>
+				</h2>
+				<h3>Turn Base Horror Puzzle made in Fortress Engine by me and 5 teammates in Sheffield Hallam University
+				</h3>
+			</header>
+			<main>
+				<section>
+					<ul>
+						<li>Created the starting engine (Fortress Engine)</li>
+						<li>Level Editor made in OpenGL that change the same Json file that the PS5 game uses to
+							generate levels</li>
+						<li>Level Generation using Json files, fix passes for colour coded doors, levers and pressure
+							plates</li>
+						<li>Tile interactions : Door open close, pressure and levers activation of other tiles, pilar
+							object taking...</li>
+						<li>Player : Movement, Inventory System</li>
+						<li>Enemy : Random Movement, A* movement, Weaknesses, State Machine system</li>
+						<li>Flashlight activation, deactivation, battery functionality and interaction with enemies</li>
+						<li>Meat : Can be thrown and interacts with some enemies</li>
+						<li>Book : Open / Close, adding pages and change of active page</li>
+						<li>UI : Simple UI and Text Boxes for narrative</li>
+
+					</ul>
+				</section>
+				<aside>
+
+					<iframe src="https://www.youtube.com/embed/hvTNwx6izd8?si=C9sTU6hFTTzgoBlM"></iframe>
+				</aside>
+
+			</main>
+
+		</article>
+		<hr>
+		<article>
+			<header>
+				<h1>Palace Engine</h1>
+				<h2>OpenGL C++ GitHub
+					<span class="extraInformation"> • Sep 2022 - May 2023</span>
+				</h2>
+				<h3>Custom c++ Engine made in OpenGL. Made by me
+				</h3>
+			</header>
+			<main>
+				<section>
+					<ul>
+						<li>Abstraction of the OpenGL library</li>
+						<li>Deferred rendering</li>
+						<li>Entity-Component-System architecture</li>
+						<li>Lighting system : Directional Light, Spot Light and Point Light</li>
+						<li>Shadow Mapping</li>
+					</ul>
+				</section>
+				<aside>
+
+					<iframe src="https://www.youtube.com/embed/IxGubT8ZGrg?si=ceMnEoCHr-9PVPPZ"></iframe>
+				</aside>
+
+			</main>
+			<hr>
+		<article>
+			<header>
+				<h1>Castle Engine</h1>
+				<h2>PS5 C++ GitHub
+					<span class="extraInformation"> • Sep 2023 - Dic 2023</span>
+				</h2>
+				<h3>Custom PS5 Engine made by me in Sheffield Hallam University
+				</h3>
+			</header>
+			<main>
+				<section>
+					<ul>
+						<li>Model Loader with Json</li>
+						<li>Texture Loader with Json</li>
+						<li>Level Editor : can add, update, save and delete scenes, and add, update, save and delete GameObjects</li>
+						<ul>
+							<li>
+								Add, Update, Save and Delete Scenes
+							</li>
+							<li>
+								Add, Update, Save and Delete GameObjects
+							</li>
+						</ul>
+					</ul>
+				</section>
+				<aside>
+
+					<iframe src="https://www.youtube.com/embed/IxGubT8ZGrg?si=ceMnEoCHr-9PVPPZ"></iframe>
+				</aside>
+
+			</main>
+
+		</article>
 	</main>
 	<footer id="footer"></footer>
 
