added all projects to projects.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<section class="borderSpacer">
 
-			<img class="profilePicture" , src="Profile2.png">
+			<img alt="Profile Picture of Kai Jauregi" class="profilePicture" , src="assets/images/Profile.png">
 			<section>
 				<h1>Gameplay and Tools Programmer</h1>
 				<p>Game developer looking forward to specialize in artificial
