--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@
 	<div id="header"></div>
 
 	<main class="projectsMain">
+		<!-- ----------------- Born To Rise ----------------- -->
 		<article>
 			<header>
 				<h1>Born To Rise</h1>
@@ -45,7 +46,7 @@
 			</header>
 			<main>
 				<section>
-					<ul>
+					<ul class="firstUl">
 						<li>Create, Insert and Enhanced all the particles</li>
 						<li>Masilla Enemy Movement System</li>
 						<li>The Rotable Platform</li>
@@ -65,6 +66,7 @@
 
 		</article>
 		<hr>
+		<!-- ----------------- LoreNomicon ----------------- -->
 		<article>
 			<header>
 				<h1>LoreNomicon</h1>
@@ -76,12 +78,49 @@
 			</header>
 			<main>
 				<section>
-					<ul>
+					<ul class="toBigUL">
 						<li>Created the starting engine (Fortress Engine)</li>
-						<li>Level Editor made in OpenGL that change the same Json file that the PS5 game uses to
-							generate levels</li>
-						<li>Level Generation using Json files, fix passes for colour coded doors, levers and pressure
-							plates</li>
+						<li>Level Editor</li>
+						<ul>
+							<li>Made in OpenGL</li>
+							<li>Changes the Json file used to generate levels in the PS5 Game</li>
+							<li>Selection of levels</li>
+							<li>Add Levels</li>
+							<li>Delete Levels</li>
+							<li>Select Order of Levels</li>
+							<li>Select width and depth of level</li>
+							<li>Tiles</li>
+							<ul>
+								<li>Change Tile type</li>
+								<li>Add all information needed for tile to work as designers intented</li>
+							</ul>
+							<li>Player</li>
+							<ul>
+								<li>Change Player position and direction</li>
+								<li>Inventory</li>
+								<ul>
+									<li>Select what objects the Player has in the level</li>
+								</ul>
+							</ul>
+							<li>Enemy</li>
+							<ul>
+								<li>Change Enemy Type</li>
+								<li>Change Enemy Starting Movement type</li>
+								<li>Change Enemy position and direction</li>
+								<li>Change where the Enemy would go if scaping</li>
+							</ul>
+						</ul>
+						<li>Level Generation</li>
+						<ul>
+							<li>Uses Json files</li>
+							<li>Make doors, levers and preassure plates colour coded</li>
+							<li>Make doors and levers rotate towards the correct direction</li>
+							<li>Add one more layer of walls on top of the actual walls</li>
+							<li>Set the player</li>
+							<li>Set the enemies</li>
+							<li>Set the UI</li>
+							<li>Set the Inventory and book Inventory</li>
+						</ul>
 						<li>Tile interactions : Door open close, pressure and levers activation of other tiles, pilar
 							object taking...</li>
 						<li>Player : Movement, Inventory System</li>
@@ -102,6 +141,7 @@
 
 		</article>
 		<hr>
+		<!-- ----------------- Palace Engine ----------------- -->
 		<article>
 			<header>
 				<h1>Palace Engine</h1>
@@ -113,7 +153,7 @@
 			</header>
 			<main>
 				<section>
-					<ul>
+					<ul class="firstUl">
 						<li>Abstraction of the OpenGL library</li>
 						<li>Deferred rendering</li>
 						<li>Entity-Component-System architecture</li>
@@ -128,39 +168,268 @@
 
 			</main>
 			<hr>
-		<article>
-			<header>
-				<h1>Castle Engine</h1>
-				<h2>PS5 C++ GitHub
-					<span class="extraInformation"> • Sep 2023 - Dic 2023</span>
-				</h2>
-				<h3>Custom PS5 Engine made by me in Sheffield Hallam University
-				</h3>
-			</header>
-			<main>
-				<section>
-					<ul>
-						<li>Model Loader with Json</li>
-						<li>Texture Loader with Json</li>
-						<li>Level Editor : can add, update, save and delete scenes, and add, update, save and delete GameObjects</li>
-						<ul>
-							<li>
-								Add, Update, Save and Delete Scenes
-							</li>
-							<li>
-								Add, Update, Save and Delete GameObjects
-							</li>
+			<!-- ----------------- Castle Engine ----------------- -->
+			<article>
+				<header>
+					<h1>Castle Engine</h1>
+					<h2>PS5 C++ GitHub
+						<span class="extraInformation"> • Sep 2023 - Dic 2023</span>
+					</h2>
+					<h3>Custom PS5 Engine made by me in Sheffield Hallam University
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>Model Loader with Json</li>
+							<li>Texture Loader with Json</li>
+							<li>Level Editor </li>
+							<ul>
+								<li>
+									Add, Update, Save and Delete Scenes
+								</li>
+								<li>
+									Add, Update, Save and Delete GameObjects
+								</li>
+							</ul>
 						</ul>
-					</ul>
-				</section>
-				<aside>
+					</section>
+					<aside>
 
-					<iframe src="https://www.youtube.com/embed/IxGubT8ZGrg?si=ceMnEoCHr-9PVPPZ"></iframe>
-				</aside>
+						<img alt="Castle Engine Picture" src="assets/gifs/ps5.gif">
+					</aside>
 
-			</main>
+				</main>
 
-		</article>
+			</article>
+			<hr>
+			<!-- ----------------- Fortress Engine ----------------- -->
+			<article>
+				<header>
+					<h1>Fortress Engine</h1>
+					<h2>OpenGL C++ GitHub
+						<span class="extraInformation"> • Sep 2023 - Dec 2023</span>
+					</h2>
+					<h3>Custom Voxel Engine made in OpenGL. Made by me
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>World Generation</li>
+							<li>Culling</li>
+							<li>Colour picking for Voxel Updating</li>
+							<li>Collision detection</li>
+							<li>Octrees</li>
+							<li>Threads</li>
+						</ul>
+					</section>
+					<aside>
+
+						<img alt="Fortress Engine Picture" src="assets/gifs/FortressEngine.gif">
+					</aside>
+
+				</main>
+
+			</article>
+			<hr>
+			<!-- ----------------- Multiagent System ----------------- -->
+			<article>
+				<header>
+					<h1>Multiagent System</h1>
+					<h2>ESAT Engine C++ IA GitHub
+						<span class="extraInformation"> • Sep 2022 - Dec 2023</span>
+					</h2>
+					<h3>Multiagent System AI with 3 movement algorithms. Made by me
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>Units Creations</li>
+							<li>Units Movement System</li>
+							<ul>
+								<li>Random Movement</li>
+								<li>Deterministic Movement</li>
+								<li>Follower Movement</li>
+							</ul>
+							<li>Interface</li>
+							<ul>
+								<li>Add Units</li>
+								<li>Delete Units</li>
+								<li>Control Units</li>
+								<ul>
+									<li>Change Movement System</li>
+									<li>Stop or Active all or any unit</li>
+								</ul>
+							</ul>
+						</ul>
+					</section>
+					<aside>
+
+						<img alt="Multiagent System Picture" src="assets/gifs/IAFirstProject.gif">
+					</aside>
+
+				</main>
+
+			</article>
+			<hr>
+			<!-- ----------------- Procedural World Generation ----------------- -->
+			<article>
+				<header>
+					<h1>Procedural World Generation</h1>
+					<h2>Palace Engine C++ IA GitHub 
+						<span class="extraInformation"> • Jan 2023 - May 2023</span>
+					</h2>
+					<h3>World generation with multiagent system. Made by me
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>World generation using Cellular Automata</li>
+							<ul>
+								<li>World Seeds</li>
+								<li>Three World Sizes</li>
+							</ul>
+							<li>Camera</li>
+							<ul>
+								<li>Zoom in and out</li>
+								<li>Follow entity that player will move to</li>
+							</ul>
+							<li>Multi Agent System for animals</li>
+							<ul>
+								<li>Calm State</li>
+								<ul><li>Random Movement</li></ul>
+								<li>Scape State</li>
+								<ul><li>A* algorithm</li></ul>
+								<li>Persecute State</li>
+								<ul><li>A* algorithm</li></ul>
+							</ul>
+							<li>Markov Chain</li>
+							<ul>
+								<li>Plants Grow</li>
+								<li>Tiles Update</li>
+							</ul>
+							
+						</ul>
+					</section>
+					<aside>
+
+						<img alt="Procedural World Generation Picture" src="assets/images/IAProject.png">
+					</aside>
+
+				</main>
+
+			</article>
+			<hr>
+			<!-- ----------------- Meteor Shower ----------------- -->
+			<article>
+				<header>
+					<h1>Procedural World Generation</h1>
+					<h2>Unity C# GitHub
+						<span class="extraInformation"> • Apr 2022 - May 2022</span>
+					</h2>
+					<h3>Arcade-like Videogame. Made by me
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>Enemy Wave System</li>
+							<li>Enemy</li>
+							<ul>
+								<li>Movement</li>
+								<li>Death</li>
+								<li>Colour Randomization</li>
+							</ul>
+							<li>Player</li>
+							<ul>
+								<li>Simple Movement</li>
+								<li>Dash Attack</li>
+								<li>Death</li>
+							</ul>
+							<li>Game Feel</li>
+							<ul>
+								<li>Particles</li>
+								<li>Player Dash Colour Change</li>
+								<li>Camera Shake</li>
+								<li>UI</li>
+								<ul>
+									<li>Timer</li>
+									<li>Start State</li>
+									<li>Lose State</li>
+								</ul>
+								<li>Music</li>
+							</ul>
+						</ul>
+					</section>
+					<aside>
+
+						<img alt="Meteor Shower Picture" src="assets/gifs/ScapeBox.gif">
+					</aside>
+
+				</main>
+
+			</article>
+			<hr>
+			<!-- ----------------- Space Shock ----------------- -->
+			<article>
+				<header>
+					<h1>Space Shock</h1>
+					<h2>Unity C# GitHub
+						<span class="extraInformation"> • Nov 2021 - Dic 2021</span>
+					</h2>
+					<h3>Rythm-like game + Arcade Shooter. Made by me and <a href="https://www.linkedin.com/in/ramon-perez-segarra/" target="_blank">Ramón Pérez Segarra</a>
+					</h3>
+				</header>
+				<main>
+					<section>
+						<ul class="firstUl">
+							<li>Enemy Wave System</li>
+							<li>Enemies</li>
+							<ul>
+								<li>Movement System</li>
+								<li>Health System</li>
+								<li>Destruction System</li>
+							</ul>
+							<li>Player</li>
+							<ul>
+								<li>Movement</li>
+								<li>Death</li>
+								<li>Attack</li>
+								<ul>
+									<li>Bullet Movement</li>
+									<li>Bullet Dead</li>
+								</ul>
+							</ul>
+							<li>Game Feel</li>
+							<ul>
+								<li>Particles</li>
+								<ul>
+									<li>Ship Smoke</li>
+									<li>Bullet Smoke</li>
+									<li>Ships Explosions</li>
+								</ul>
+								<li>Player Rotation when moved</li>
+								<li>Camera Shake</li>
+								<li>UI</li>
+								<ul>
+									<li>Health Bar</li>
+									<li>Combo Meter</li>
+									<li>Points</li>
+								</ul>
+							</ul>
+						</ul>
+					</section>
+					<aside>
+
+						<img alt="Space Shock Picture" src="assets/gifs/SpaceShock.gif">
+					</aside>
+
+				</main>
+
+			</article>
 	</main>
 	<footer id="footer"></footer>
 
