Added all the projects, added a scrollbar to LoreNomicon project

--- a/projects.html
+++ b/projects.html
@@ -121,14 +121,57 @@
 							<li>Set the UI</li>
 							<li>Set the Inventory and book Inventory</li>
 						</ul>
-						<li>Tile interactions : Door open close, pressure and levers activation of other tiles, pilar
-							object taking...</li>
-						<li>Player : Movement, Inventory System</li>
-						<li>Enemy : Random Movement, A* movement, Weaknesses, State Machine system</li>
-						<li>Flashlight activation, deactivation, battery functionality and interaction with enemies</li>
-						<li>Meat : Can be thrown and interacts with some enemies</li>
-						<li>Book : Open / Close, adding pages and change of active page</li>
+						<li>Tile interactions</li>
+						<ul>
+							<li>Open and Close Doors</li>
+							<li>Activate other tiles with preassure plate and levers</li>
+							<li>Take pilar objects</li>
+							<li>And more!</li>
+						</ul>
+						<li>Player and Enemy turn management</li>
+						<li>Player</li>
+						<ul>
+							<li>Movement</li>
+							<li>Inventory System</li>
+							<li>Death</li>
+							<li>Respawn</li>
+						</ul>
+						<li>Enemies</li>
+						<ul>
+							<li>State Machine System</li>
+							<ul>
+								<li>Random Movement</li>
+								<li>A* movement</li>
+							</ul>
+							<li>Weaknesses</li>
+						</ul>
+						<li>Flashlight</li>
+						<ul>
+							<li>Activate and Deactivate</li>
+							<li>Battery functionality</li>
+							<li>Interaction with enemy weaknesses</li>
+						</ul>
+						<li>Meat</li>
+						<ul>
+							<li>Throw functionality</li>
+							<li>Interaction with enemy weaknesses</li>
+							<ul><li>Change enemy path with food weakness from player to meat position</li></ul>
+						</ul>
+						<li>Book</li>
+						<ul>
+							<li>Open and Close</li>
+							<li>Add pages</li>
+							<li>Changing of active pages</li>
+						</ul>
 						<li>UI : Simple UI and Text Boxes for narrative</li>
+						<ul>
+							<li>Turns UI</li>
+							<li>Win, Lose and Pause menus</li>
+							<li>Text Box System for narrative</li>
+							<li>Flashlight UI</li>
+							<li>Inventory UI</li>
+							<li>Book UI</li>
+						</ul>
 
 					</ul>
 				</section>
