make sidepanel look more like LocalThunk website

--- a/header.html
+++ b/header.html
@@ -15,11 +15,15 @@
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<button class="openbtn" onclick="openNav()">☰ </button>
+						
 						<div id="mySidepanel" class="sidepanel">
-							<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-							<a href="index.html">Home</a>
-							<a href="projects.html">Projects</a>
-							<a href="contact.html">Contact</a>
+							<button class="openbtn" onclick="closeNav()">x </button>
+							<div>
+								<a href="index.html">Home</a>
+								<a href="projects.html">Projects</a>
+								<a href="contact.html">Contact</a>
+							</div>
+
 						</div>
 					</nav>
 				</td>
